Highlight back link in all editors.

--- a/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
@@ -2,7 +2,7 @@
   <header class="container-titlebar">
     <div class="container-titlebar--inner">
       <div class="group-symmetrical height-large--top">
-        <a href class="group-symmetrical--left link-navigation" swiper-click="closeEditor()">
+        <a href class="group-symmetrical--left link-navigation highlighted" swiper-click="closeEditor()">
           <span class="text-navigation-back">back</span>
         </a>
       </div>
