--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -1,12 +1,13 @@
-<div class="container-fluid" ng-controller="ListEditorController" ng-class="list.trans.deleted && 'container-disabled'">
+<div class="container-fluid" ng-controller="ListEditorController"
+  ng-class="list.trans.deleted && 'container-disabled'">
   <header class="container-titlebar">
     <div class="container-titlebar--inner">
       <div class="group-symmetrical height-large--top" swiper-prevent>
-        <a href class="group-symmetrical--left link-navigation highlighted active" swiper-click="endListEdit()" >
+        <a href class="group-symmetrical--left link-navigation active highlighted" swiper-click="endListEdit()">
           <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'"
             ng-bind="isListEdited() && !list.trans.deleted ? 'save' : 'back'"></span>
         </a>
-        <a href ng-if="!list.trans.deleted" class="group-symmetrical--right" swiper-click="deleteListInEdit()" >
+        <a href ng-if="!list.trans.deleted" class="group-symmetrical--right" swiper-click="deleteListInEdit()">
           <span class="icon-trash"></span>
         </a>
         <a href ng-if="list.trans.deleted" class="group-symmetrical--right link-navigation highlighted active"
