--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -4,9 +4,8 @@
     <div class="container-titlebar--inner">
       <div class="group-symmetrical height-large--top height-large--bottom" swiper-prevent>
 
-        <a href ng-hide="isEndNoteEditActionHidden()" class="group-symmetrical--left link-navigation active"
-          ng-class="isNoteEdited() && !note.trans.deleted ? 'highlighted' : 'downplayed'"
-          swiper-click="endNoteEdit()">
+        <a href ng-hide="isEndNoteEditActionHidden()"
+          class="group-symmetrical--left link-navigation active highlighted" swiper-click="endNoteEdit()">
           <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'"
             ng-bind="isNoteEdited() && !note.trans.deleted ? 'save' : 'back'"></span>
         </a>
