--- a/frontend/core/src/main/webapp/static/app/main/main.html
+++ b/frontend/core/src/main/webapp/static/app/main/main.html
@@ -3,7 +3,7 @@
   <div ng-include="urlBase + 'app/main/menu.html'" include-replace></div>
   <div ng-include="urlBase + 'app/main/editor.html'" include-replace></div>
   <div drawer-aisle class="container-drawer-aisle">
-    <div class="container-master animate-container-master" vertical-resize="master"
+    <div class="container-master" vertical-resize="master"
     vertical-resize-prevent="isEditorVisible()" vertical-resize-hide-footer="true">
       <div class="container-fluid" ng-class="getFooterVisibilityClass()">
         <header class="container-toolbar" ng-include="urlBase + 'app/main/toolbar.html'"></header>
