Added Google Closure minification to EM angularjs sources

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="em.appTest">
+<html ng-app="em.appTest" ng-strict-di>
 <head>
   <base href="/" />
   <meta charset="utf-8" />
