--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -136,6 +136,7 @@
   <script src="static/app/main/MenuController.js"></script>
   <script src="static/app/main/OmnibarEditorController.js"></script>
   <script src="static/app/main/PageNotFoundController.js"></script>
+  <script src="static/app/main/RecurringEditorController.js"></script>
   <script src="static/app/main/SynchronizeService.js"></script>
   <script src="static/app/main/ToolbarController.js"></script>
   <script src="static/app/main/TrashController.js"></script>
