--- a/frontend/core/src/main/webapp/static/app/main/editor.html
+++ b/frontend/core/src/main/webapp/static/app/main/editor.html
@@ -21,5 +21,23 @@
   <div ng-if="editorVisible" ng-switch-when="user" class="container-editor--inner">
     <div ng-include="urlBase + 'app/user/userEditor.html'" include-replace></div>
   </div>
+
+  <div ng-if="editorVisible" ng-switch-when="recurring" ng-switch="recurringType"
+    class="container-editor--inner__outer" ng-controller="RecurringEditorController">
+    <div ng-switch-when="item" class="container-editor--inner">
+      <div ng-include="urlBase + 'app/main/itemEditor.html'" include-replace></div>
+
+      <div class="container-editor--inner__after group-symmetrical">
+        <a href class="group-symmetrical--left" swiper-click="endSorting()">
+          <span>done sorting</span>
+        </a>
+        <div class="group-symmetrical--right">
+          <span ng-bind="iterableItems.indexOf(item) + 1 + '/' + iterableItems.length"></span>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
   <div ng-if="editorVisible" toaster="override"></div>
 </div>
