--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -4,7 +4,7 @@
     <div class="container-titlebar--inner">
       <div class="group-symmetrical height-large--top" swiper-prevent>
         <a href class="group-symmetrical--left link-navigation active highlighted" swiper-click="endListEdit()">
-          <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'"
+          <span class="text-navigation-back" ng-class="!isFirstSlide('listEditor') && 'not-swipeable'"
             ng-bind="isListEdited() && !list.trans.deleted ? 'save' : 'back'"></span>
         </a>
         <a href ng-if="!list.trans.deleted" class="group-symmetrical--right" swiper-click="deleteListInEdit()">
@@ -43,7 +43,7 @@
             <a href swiper-click="clickFavorite()" class="group-symmetrical--left">
               <span class="icon-star" ng-class="!isFavoriteList(list) && 'inactive'"></span>
             </a>
-            <a href swiper-click="swipeToAdvanced()" ng-hide="isFooterNavigationHidden()"
+            <a href swiper-click="swipeToAdvanced('listEditor')" ng-hide="isFooterNavigationHidden()"
               class="group-symmetrical--right link-navigation">
               <span class="text-navigation-forward">advanced</span>
             </a>
@@ -75,7 +75,7 @@
           </div>
 
           <nav role="navigation" class="swiper-no-swiping group-symmetrical">
-            <a href swiper-click="swipeToBasic()" ng-hide="isFooterNavigationHidden()"
+            <a href swiper-click="swipeToBasic('listEditor')" ng-hide="isFooterNavigationHidden()"
               class="group-symmetrical--left link-navigation">
               <span class="text-navigation-back">basic</span>
             </a>
