Inbox sorting:  * skip item  * disable enter action on titlebar title  * only register about to close callback for the first editor  * goto next item when date set for task from later widget

--- a/frontend/core/src/main/webapp/static/app/main/editor.html
+++ b/frontend/core/src/main/webapp/static/app/main/editor.html
@@ -46,7 +46,8 @@
         </a>
       </div>
 
-      <a href ng-if="!isIterableItemDirty()" class="group-symmetrical--right" swiper-click="skipItemAndGotoNextItem()">
+      <a href ng-if="!isIterableItemDirty() && getIterableItemIndex() !== iterableItems.length - 1"
+        class="group-symmetrical--right" swiper-click="skipItem()">
         <span style="color: white;">skip</span>
       </a>
       <a href ng-if="isIterableItemDirty()" class="group-symmetrical--right" swiper-click="saveItemAndGotoNextItem()">
