Save skipped item in inbox sorting.

--- a/frontend/core/src/main/webapp/static/app/main/editor.html
+++ b/frontend/core/src/main/webapp/static/app/main/editor.html
@@ -47,7 +47,7 @@
       </div>
 
       <a href ng-if="!isIterableItemDirty() && getIterableItemIndex() !== iterableItems.length - 1"
-        class="group-symmetrical--right" swiper-click="skipItem()">
+        class="group-symmetrical--right" swiper-click="saveItemAndGotoNextItem()">
         <span style="color: white;">skip</span>
       </a>
       <a href ng-if="isIterableItemDirty()" class="group-symmetrical--right" swiper-click="saveItemAndGotoNextItem()">
