--- a/frontend/core/src/main/webapp/static/app/main/editor.html
+++ b/frontend/core/src/main/webapp/static/app/main/editor.html
@@ -27,7 +27,7 @@
     <div ng-switch-when="item" class="container-editor--inner">
       <div ng-include="urlBase + 'app/main/itemEditor.html'" include-replace></div>
     </div>
-    <div ng-switch-when="task" class="container-editor--inner">
+    <div ng-switch-when="task" class="container-editor--inner" vertical-resize-delay>
       <div ng-include="urlBase + 'app/tasks/taskEditor.html'" include-replace></div>
     </div>
 
