Added note convert to inbox sorting.

--- a/frontend/core/src/main/webapp/static/app/main/editor.html
+++ b/frontend/core/src/main/webapp/static/app/main/editor.html
@@ -30,6 +30,9 @@
     <div ng-switch-when="task" class="container-editor--inner" vertical-resize-delay>
       <div ng-include="urlBase + 'app/tasks/taskEditor.html'" include-replace></div>
     </div>
+    <div ng-switch-when="note" class="container-editor--inner" vertical-resize-delay>
+      <div ng-include="urlBase + 'app/notes/noteEditor.html'" include-replace></div>
+    </div>
 
     <div class="container-editor--inner__after group-symmetrical">
 
