--- a/frontend/core/src/main/webapp/static/app/main/editor.html
+++ b/frontend/core/src/main/webapp/static/app/main/editor.html
@@ -39,22 +39,26 @@
       <a href ng-if="!isIterableItemDirty()" class="group-symmetrical--left" swiper-click="endSorting()">
         <span style="color: white;">done</span>
       </a>
-      <a href ng-if="isIterableItemDirty()" class="group-symmetrical--left" swiper-click="undoSorting()">
+      <a href ng-if="isIterableItemDirty()" class="group-symmetrical--left"
+        swiper-click="undoSorting(dataInEdit)">
         <span style="color: white;">undo</span>
       </a>
 
       <div class="group-symmetrical--middle">
         <a href>
-          <span style="color: white;" ng-bind="getIterableItemIndex() + 1 + '/' + iterableItems.length"></span>
+          <span style="color: white;"
+            ng-bind="getIterableItemIndex(iterableItem) + 1 + '/' + iterableItems.length"></span>
         </a>
       </div>
 
-      <a href ng-if="!isIterableItemDirty() && getIterableItemIndex() !== iterableItems.length - 1"
-        class="group-symmetrical--right" swiper-click="saveItemAndGotoNextItem()">
+      <a href ng-if="!isIterableItemDirty() && getIterableItemIndex(iterableItem) !== iterableItems.length - 1"
+        class="group-symmetrical--right" swiper-click="saveItemAndGotoNextItem(iterableItem)">
         <span style="color: white;">skip</span>
       </a>
-      <a href ng-if="isIterableItemDirty()" class="group-symmetrical--right" swiper-click="saveItemAndGotoNextItem()">
-        <span style="color: white;" ng-bind="getIterableItemIndex() !== iterableItems.length - 1 ? 'next' : 'finish'"></span>
+      <a href ng-if="isIterableItemDirty()" class="group-symmetrical--right"
+        swiper-click="saveItemAndGotoNextItem(iterableItem)">
+        <span style="color: white;"
+          ng-bind="getIterableItemIndex(iterableItem) !== iterableItems.length - 1 ? 'next' : 'finish'"></span>
       </a>
     </div>
   </div>
