Fix typo in undo sorting function parameter.

--- a/frontend/core/src/main/webapp/static/app/main/editor.html
+++ b/frontend/core/src/main/webapp/static/app/main/editor.html
@@ -40,7 +40,7 @@
         <span style="color: white;">done</span>
       </a>
       <a href ng-if="isIterableItemDirty()" class="group-symmetrical--left"
-        swiper-click="undoSorting(dataInEdit)">
+        swiper-click="undoSorting(iterableItem)">
         <span style="color: white;">undo</span>
       </a>
 
