Fixed footer was not visible in omnibar. Was broken since 4885c52b51c6a86443fdf719d58befad248372a7.

--- a/frontend/core/src/main/webapp/static/app/main/itemEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/itemEditor.html
@@ -63,7 +63,7 @@
       </textarea>
 
     </div>
-    <footer class="container-content--after editor-footer">
+    <footer class="container-content--after">
       <div class="group-symmetrical">
         <a href class="group-symmetrical--left link" swiper-click="convertToTask(item)">
           <span class="text-convert">task</span>
